crates/baml-rt-builder/tests/snapshots/codegen_test__baml_enum_from_schema.snap
---
source: crates/baml-rt-builder/tests/codegen_test.rs
expression: baml_output
---
enum MathOperation {
  Add
  Subtract
  Multiply
  Divide
}
