crates/baml-rt-builder/tests/snapshots/codegen_test__baml_open_step_unit_input.snap
---
source: crates/baml-rt-builder/tests/codegen_test.rs
expression: open_step_section
---
class SupportCalculateOpenStep {
  op "Open"
  reason string? @description("Optional explanation for this step.")
}
